http-proxy-middleware added

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "homepage": "https://cod3kid.github.io/crypto",
-  "proxy": "https://api1.poocoin.app", 
   "name": "poo-coin-trick",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "gh-pages": "^3.2.3",
+    "http-proxy-middleware": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
